--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
             <groupId>org.apache.clerezza.commons-rdf</groupId>
             <artifactId>commons-rdf-api</artifactId>
             <version>0.2</version>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -52,6 +51,7 @@
             <groupId>org.apache.clerezza</groupId>
             <artifactId>rdf.core</artifactId>
             <version>1.0.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -64,6 +64,13 @@
             <artifactId>rdf.ontologies</artifactId>
             <version>1.0.0</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.clerezza</groupId>
+            <artifactId>rdf.jena.commons</artifactId>
+            <!--SNAPSHOT version needed because of CLEREZZA-1009 -->
+            <version>1.1.1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -110,6 +117,19 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshot Repository</name>
+            <url>http://repository.apache.org/snapshots</url>
+        </repository>
+    </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
